2008-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (CompressionSupported): Use
	TIFFGetConfiguredCODECs() to test if a requested compression type
	is supported by libtiff.  Based on advice from Frank Warmerdam.
	* configure.ac: Add test for TIFFGetConfiguredCODECs() in libtiff.

2008-02-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c: With libtiff 3.6.1, including tiff.h and tiffio.h
	is not sufficient to obtain the definitions from tiffconf.h so
	libtiff is assumed to not support any features, such as
	compression.  Avoid this problem by explicitly including
	tiffconf.h if it is found.  This resolves SourceForge issue
	[1883527] compression of tiff-file has no effect.

2008-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/installer/inc/setup.isx: Set Inno Setup installer
	compression to "lzma/max".
	* PerlMagick/Magick.xs: Eliminate use of memory allocation macros
	since these failed miserably under Windows where it seems that
	malloc, free, and realloc are redefined via macros by the Perl
	build environment.  This reverts changes made on 2007-12-01.
	* magick/memory.c (MagickAcquireMemoryArray): Use implementation
	from the 1.1 branch.
	* magick/utility.h: Remove MagickSafeMultiplySize_t since it seems
	that use of inline functions in Windows is a disaster area.

2008-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (windows-dist): Create a 7z compressed Windows
	comprehensive source package.  See http://www.7-zip.org/ for
	information on Windows 7-Zip and http://p7zip.sourceforge.net/ for
	information on portable 7-Zip (P7ZIP).

2008-02-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Add logging for image resolution
	and resolution units.
	* magick/version.h.in: Update copyright year to 2008.

2008-02-01  Gary V. Vaughan  <gary@gnu.org>
	
	* configure.ac: Updated for libtool-2.1b.