@@ -9,15 +9,15 @@
 
 # Generated from ltversion.in.
 
-# serial 2586 ltversion.m4
+# serial 2587 ltversion.m4
 # This file is part of GNU Libtool
 
 m4_define([LT_PACKAGE_VERSION], [2.1c])
-m4_define([LT_PACKAGE_REVISION], [1.2586])
+m4_define([LT_PACKAGE_REVISION], [1.2587])
 
 AC_DEFUN([LTVERSION_VERSION],
 [macro_version='2.1c'
-macro_revision='1.2586'
+macro_revision='1.2587'
 _LT_DECL(, macro_version, 0, [Which release of libtool.m4 was used?])
 _LT_DECL(, macro_revision, 0)
 ])
