@@ -24,6 +24,7 @@
 2008-02-06  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> configure.ac: Updated to latest CVS libtool.
   <LI> coders/tiff.c (CompressionSupported): Use
         TIFFGetConfiguredCODECs() to test if a requested compression type
         is supported by libtiff.  Based on advice from Frank Warmerdam.
